# md2word

./: .env.example  .gitignore  CLAUDE.md  KNOWN-ISSUES.md  LICENSE  MD2PPTX.md  README-demo_v2.md  README.md  WORKFLOW.md  WORKFLOWS.md  Yeti - AI Roadmap Executive Readout_v2.md  build_exe.ps1  freeze_hook.py  md2word.spec  md2word_entry.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
src/md2word/: cli.py  output.py  validate.py
src/md2word/ai/: chunk.py  client.py  conflict.py  edit_plan.py  interpret.py  map.py  pre_compare.py  style_infer.py  summarize.py
src/md2word/approaches/: pandoc.py  xml_edit.py
tools/: validate_html.py
